web/themes/transit/css/style.css
/* ... */
@media (max-width: 768px) {
    .s4-breadcrumb {
        display: none;
    }
    .ms-core-listMenu-horizontalBox ul {
        display: block;
        position: relative;
        margin: 0 0;
    }
    .ms-core-listMenu-horizontalBox ul,
    .ms-core-listMenu-horizontalBox li,
    .ms-core-listMenu-horizontalBox .ms-core-listMenu-item,
    .ms-core-listMenu-horizontalBox > ul > li > table {
        float: none;
    }
    .ms-core-listMenu-horizontalBox ul,
    .ms-core-listMenu-horizontalBox li {
        float: none;
    }
    .ms-core-listMenu-horizontalBox li.static > .ms-core-listMenu-item,
    .ms-navedit-editLinksText {
        margin-right: 0;
        color: #999;
        line-height: 20px;
        position: relative;
        display: block;
        padding: 7px 0;
        text-decoration: none;
    }
    .ms-core-listMenu-horizontalBox li.static:hover > .ms-core-listMenu-item {
        color: #fff;
    }
    #DeltaSuiteLinks {
        display: none;
    }
}
@media only screen and (max-width: 480px) {
    #RibbonContainer-TabRowRight {
        display: none !important;
    }
    .headlogo {
        width: 20%;
    }
    .ms-siteicon-img {
        width: 100%;
    }
    #pageTitle {
        font-size: 20px;
    }
}
@media screen and (max-width: 400px) {
    .navbar-header .navbar-toggle {
        margin-top: 15px;
    }
    .navbar-header .navbar-brand {
        width: 70%;
    }
    .navbar-header .navbar-brand #DeltaSiteLogo {
        width: 100%;
    }
    .navbar-header .navbar-brand #DeltaSiteLogo img {
        width: 100%;
    }
}
@media only screen and (max-width: 768px) {
    #DeltaSiteLogo {
        width: 35%;
    }
    .ms-siteicon-img {
        width: 100%;
    }
    /*
    .input-group {
      display: none;
    }*/
    .navbar-collapse {
        /*width: 100%;*/

    }
    .ms-core-listMenu-horizontalBox ul li ul.dynamic li .ms-core-listMenu-item {
        float: none;
        padding: 7px 0;
    }
    .dynamic-children.hover ul.dynamic {
        display: block;
        width: 80% !important;
        left: 40px !important;
        top: 0 !important;
        background: none;
        border: none;
        box-shadow: none;
        padding: 0;
    }
    .dynamic-children ul.dynamic {
        display: none;
    }
    .ms-core-listMenu-horizontalBox ul,
    .ms-core-listMenu-horizontalBox li {
        display: block;
        float: none;
        position: relative;
    }
}
@media only screen and (min-width: 768px) {
    .ms-core-listMenu-horizontalBox ul li ul.dynamic li.dynamic .ms-core-listMenu-item {
        float: none;
        padding: 7px 0;
    }
    .ms-core-listMenu-horizontalBox ul li ul.dynamic li.dynamic,
    .ms-core-listMenu-horizontalBox ul li ul.dynamic {
        float: none;
    }
    ul.dynamic {
        padding: 0;
        padding-left: 10px;
    }
    .ms-core-listMenu-horizontalBox ul li ul.dynamic li.dynamic:hover .ms-core-listMenu-item span {
        color: #000 !important;
    }
}
.ms-WPBody > table img {
    width: 100%;
}
#MainRow > div {
    z-index: 0;
}
h1.ms-core-pageTitle {
    display: none;
}
/* hide page title next to the logo */
#s4-bodyContainer {
    padding-bottom: 0 !important;
}
/* header top area */
.transit-header-top {
    background-color: #002F87;
    background-image: url('/themes/transit/images/header1.png');
    background-position: center;
    background-repeat: no-repeat;
    border-bottom: 3px solid #2B7051;
    min-height: 63px;
}
.transit-google-translate {
    margin-top: 20px;
    float: right;
}
@media only screen and (max-width: 768px) {
    .transit-google-translate {
        margin-top: 20px;
        margin-bottom: 20px;
        float: left;
    }
}
.transit-onebus {
    margin-top: 15px;
    /*margin-right: 25px;*/
    /*float: right;*/
    color: #fff;
    font-size: 20px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 38px;
}
.transit-onebus span {
    font-weight: 100;
}
.transit-onebus a {
    color: #fff;
    text-decoration: none;
}
.transit-onebus a:active {
    color: #fff;
    text-decoration: none;
}
.transit-onebus a:hover {
    color: #fff;
    text-decoration: none;
}
.transit-onebus:before {
    content: "";
    display: block;
    background: url('/themes/transit/images/onebus-logo.png') no-repeat;
    width: 38px;
    height: 38px;
    float: left;
    margin: 0 20px 0 0;
}
.transit-onebus-icon {
    margin-top: 15px;
    background: url('/themes/transit/images/onebus-logo.png') no-repeat;
    width: 38px;
    height: 38px;
    float: left;
}
.transit-onebus-icon a {
    width: 38px;
    height: 38px;
}
.transit-alerts {
    margin-top: 15px;
    /*margin-right: 25px;*/
    /*float: right;*/
    color: #fff;
    font-size: 20px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 38px;
}
.transit-alerts a {
    color: #fff;
    text-decoration: none;
}
.transit-alerts a:active {
    color: #fff;
    text-decoration: none;
}
.transit-alerts a:hover {
    color: #fff;
    text-decoration: none;
}

@media only screen and (max-width: 440px) {
    .transit-onebus {
        float: left;
    }
    .transit-alerts {
        margin-right: 0;
        font-size: 14px;
    }
}
.yamm .nav,
.yamm .collapse,
.yamm .dropup,
.yamm .dropdown {
    position: static;
}
.yamm .container {
    position: relative;
}
.yamm .dropdown-menu {
    left: auto;
    background-color: #F3F4F9;
    border-radius: 0;
    border: none;
    box-shadow: none;
    min-width: 285px;
}
.yamm .yamm-content {
    padding: 20px 30px;
}
.yamm .dropdown.yamm-fw .dropdown-menu {
    left: 0;
    right: 0;
    z-index: 999;
}
.yamm .transit-menu--column {
    padding-right: 30px;
}
.yamm .transit-menu-vborder {
    border-left: solid 1px #8fb2a5;
    padding-left: 30px;
    padding-right: 0;
}
.transit-nav.navbar-default {
    background-color: #fff;
    border: none;
}
.transit-nav.navbar-default .grid {
    padding: 30px 45px;
}
/* ... */

